--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.16.0",
     "@types/helmet": "0.0.42",
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
