--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "typescript": "^3.2.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.16.0",
     "@types/helmet": "0.0.42",
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
