quick work on login/signup

--- a/src/config.json
+++ b/src/config.json
@@ -1,8 +1,6 @@
 {
   "appPort": 3000,
   "database": {
-    "url": "mongodb://<dbuser>:<dbpassword>@<dbhost>:<dbport>/<database>",
-    "user": "user",
-    "password": "password"
+    "url": "mongodb://localhost:27017/boilerplate",
   }
 }
